feat: add setBaseline api
