# backend/application/doc/swaggerdef.yaml
@@ -411,3 +411,22 @@ components:
       allOf:
         - $ref: '#/components/schemas/ThesisIdentifier'
         - $ref: '#/components/schemas/WateringEventDto'
+    
+    WateringBaseline:
+      type: object
+      properties:
+        maxIrrigation:
+          type: number
+        irrigationBaseline:
+          type: number
+        wateringCapacity:
+          type: number
+        valveId:
+          type: string
+        irrigation_master_thesis:
+          type: string
+        watering_hour:
+          type: string
+          format: time
+        sprinkler_capacity:
+          type: number
